---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 3/5/25
  Minor Features:
    - Copying and pasting hex core settings now copies over loader filters along with the inventory filters.
  Bugfixes:
    - Fixed that input loaders on the sides of hex cores weren't working.
    - Fixed that new trades that should have productivity didn't.
  Changes:
    - Made hex core output loader filters work per-lane.
    - Enabled (adjustable) belt stacking for hex core output loaders.
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 1/5/25
  Minor Features:
    - It is now possible to see for each item below bronze (1-star) rank whether you've bought or sold it already.
  Features:
    - Added more quests and unique rewards.
    - Added toggle in trade overview filter to only show trades in claimed hex cores (off by default).
  Bugfixes:
    - Fixed that quest selection wasn't preserved in the questbook after closing and reopening, and a related bug.
  Changes:
    - Hex core player teleportation is now locked behind a quest.
    - Hex core deletion is now locked behind a quest.
    - Resource supercharging is now locked behind a quest.
    - Hex core modes are now locked behind quests.
  Balancing:
    - Crude oil supercharging is now more expensive by default (it is a mod setting).
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 1/5/25
  Bugfixes:
    - Changed hex core icon from [img=entity.steel-chest] to [img=entity.hex-core]
    - Removed pistols from trade item rolls because they cannot be crafted.
    - Fixed that custom planets added by mods would cause crashes with the trade overview.
  Changes:
    - The trade overview and catalog are now locked behind the first two quests (which serve as a tutorial).