@@ -159,6 +159,7 @@ total-output-value=Total Output Value: __1__
 productivity-bonus=Productivity
 cost=Cost: __1__
 show-only-claimed=Show only claimed
+click-to-ping=Click to ping in chat.
 
 [hextorio]
 intro=Click on the questbook button in the top left.
@@ -178,6 +179,7 @@ command-usage=Usage: __1__
 command-examples=Examples:
 no-room-for-item=No room in inventory to insert __1__. It was dropped on the ground instead.
 rewards-while-away=You've been given quest rewards that were acquired by other players while you weren't playing.
+player-trade-ping=__1__ pinged the trade __2__ in the hex core at __3__
 
 [command-help]
 hextorio-commands=List all commands added by Hextorio.
